@@ -17,6 +17,7 @@ AC_USE_SYSTEM_EXTENSIONS
 AC_PROG_CC
 AC_PROG_AWK
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_17
 AC_SEARCH_LIBS([strerror],[cposix])
 LT_INIT
 
