@@ -23,6 +23,7 @@ AC_PROG_LN_S
 LT_INIT
 
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_17
 
 AC_PATH_PROGS(PERL, perl5 perl, perl, $LPATH)
 
