@@ -16,6 +16,7 @@ dnl Checks for programs.
 AC_USE_SYSTEM_EXTENSIONS
 AC_PROG_CC
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_17
 LT_INIT
 
 if test "$GCC" = yes ; then
